fixed button overflows on translations

--- a/app/javascript/snap/styles/components/_artwork.scss
+++ b/app/javascript/snap/styles/components/_artwork.scss
@@ -144,27 +144,26 @@
         justify-content: space-evenly;
 
         .btn-share-result {
-          min-width: 120px;
           width: fit-content;
           overflow: hidden;
           text-overflow: ellipsis;
           height: 45px;
           border: 2px solid rgba(0, 0, 0, 0.12);
           border-radius: 100px;
+          display: flex;
+          flex-flow: row nowrap;
+          justify-content: center;
+          align-items: center;
+          padding: 20px;
 
           img {
-            position: relative;
-            left: 12px;
-            top: 8px;
+            padding-right: 10px;
           }
 
           .text-share {
             line-height: 24px;
             font-size: 16px;
             color: #6e6e6e;
-            top: 8px;
-            left: 22px;
-            position: relative;
           }
         }
       }
