--- a/app/javascript/snap/styles/components/_focus-result.scss
+++ b/app/javascript/snap/styles/components/_focus-result.scss
@@ -23,6 +23,7 @@
     text-transform: uppercase;
     font-family: 'Calibre-Medium', sans-serif;
     line-height: 1.2;
+    padding-right: 10px;
   }
 
   .language-dropdown {
